# image-data-scraping-resource-pack-from-Pinterest-

./: LICENSE  README.md  pyproject.tom  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
pingrabber/: __init__.py  core.py
