[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pingrabber"
version = "2.1"
description = "A lightweight Python library that scrapes high-quality images from any public Pinterest board using the official RSS feed"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VVui-blip", email = "vuv54581@gmail.com"}
]
maintainers = [
    {name = "VVui-blip", email = "vuv54581@gmail.com"}
]
keywords = [
    "pinterest",
    "scraper",
    "image-downloader",
    "rss",
    "web-scraping"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "lxml>=4.6.0"
]

[project.optional-dependencies]
search = [
    "ddgs>=1.0.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/VVui-blip/image-data-scraping-resource-pack-from-Pinterest-"
Repository = "https://github.com/VVui-blip/image-data-scraping-resource-pack-from-Pinterest-.git"
Issues = "https://github.com/VVui-blip/image-data-scraping-resource-pack-from-Pinterest-/issues"
Documentation = "https://github.com/VVui-blip/image-data-scraping-resource-pack-from-Pinterest-/blob/main/README.md"

[project.scripts]
pingrabber = "pingrabber.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pingrabber*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
pingrabber = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=pingrabber --cov-report=term-missing"
testpaths = [
    "tests"
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
